--- a/Todo.html
+++ b/Todo.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo</title>
-    <link href=>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-   <div> </di 
+   <div class="container">
+       <div class="sideBar">
+            <img src="./Images/Capture1.PNG" alt="Home-Logo">
+            <div class="menuBar">
+                <div class="search">
+                    <input type="search" id="" placeholder="Search">
+                </div>
+                <div class="buttons">
+                    <input type="button" value="Assigned To Me" id="">
+                    <input type="button" value="Tasks" id="">
+                </div>
+            </div>
+        </div>
+            <div class="createButton">
+                 <input type="button" value="Create ToDo" id="" autofocus>
+            </div>
+    </div>
 </body>
 </html>
