--- a/Todo.html
+++ b/Todo.html
@@ -10,20 +10,29 @@
 <body>
    <div class="container">
        <div class="sideBar">
-            <img src="./Images/Capture1.PNG" alt="Home-Logo">
-            <div class="menuBar">
-                <div class="search">
-                    <input type="search" id="" placeholder="Search">
-                </div>
-                <div class="buttons">
-                    <input type="button" value="Assigned To Me" id="">
-                    <input type="button" value="Tasks" id="">
-                </div>
+            <div class="search">
+                <input type="search" id="searchBox" placeholder="Search">
+            </div>
+
+            <div class="buttons">
+                <div class="assignTask"><a href="">Assigned To Me</a></div>
+                <div class="createTask"><a href="">Tasks</a></div>
             </div>
         </div>
-            <div class="createButton">
-                 <input type="button" value="Create ToDo" id="" autofocus>
+        
+        <div class="logo">
+            <div class="homeIcon">
+                <img src="./Images/Capture1.PNG" alt="Home Icon">
             </div>
+
+            <div class="bodyImage">
+                <img src="./Images/Capture2.PNG" alt="Flower">
+            </div>
+
+            <div class="createButton">
+                 <input type="text" placeholder="Create ToDo" id="todo">
+            </div>
+        </div>    
     </div>
 </body>
 </html>
